element/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: element
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
      appProtocol: http
  selector:
    app.kubernetes.io/name: element
    app.kubernetes.io/instance: matrix
