element/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: element
spec:
  rules:
    - host: chat.haardiek.org
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: element
              port:
                number: 80
  tls:
    - hosts:
        - chat.haardiek.org
      secretName: element-certificate
